create github pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -335,7 +335,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HffhlhY1qsIMRiz8FZvFP2StuZxUlOSUi2WCOl4ud/GFbuXz0JA8XMgNJLcmfvLnI8Yzbqkuu3M/hZsCFJDpIAn5kpxTFQvL/lUGPpIpd9IEEsllxqP2NexT+NqsiBWi">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UIN7Zxk7XvFtuJqri6LF5wER7ryvzehPMrpg5PNMHCTktnB4UIl0Sfh7P1hptKJHUYG2AoMI2V7xIKXkBI15sAexvl61N3IpLlzgLdAJNuduEEGbYmcM5hLPOH7gnzEC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -381,7 +381,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Subscriu-te ara a la nostra newsletter i rep totes les novetats.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iXTwumPG0yIbd1kmPEd2w2o24tza8zPHhczFSV0169qeJwRLxfZoKiW5grkBZoF+n8O8oH/IiqV3LAaUrY+IPlEFOfREd9W300SxJCCan90AtCJ+xJtFfrP2c1TO5zdk">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G/q3vMorTtsX0dbZ5ZMIlAfmvkjABu/X8wE4N31Jeosq/2YgJvHR8Mx0farHjTEZ3A8undomfgtNGn9dSLAazkhhK5/+PGy1b91/kKDP4lTmBe4h2QfTNFSw4xeJEmfi">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
