--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/style.css">
-  <link rel="stylesheet" href="assets/slick.css">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link rel="stylesheet" href="assets/jquery.socialfeed.css">
   <link rel="stylesheet" href="assets/style.css">
@@ -73,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -220,23 +218,7 @@
         </div>
 </div></section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="34274679149.727bfe1.3609209835f04a63900a5146d695fb70" data-per-row-grid="6" id="instagram-feed-block-d" data-rv-view="13" style="background-image: url(assets/images/bernard-hermant-hq3wzny3yz0-unsplash-2000x1333.jpg); padding-top: 160px; padding-bottom: 160px;">
-    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(239, 239, 239);">
-    </div>
-    <div class="container container_toggle">
-        <div class="row">
-            <div class="col">
-                <div class="inst">
-                    <h1 class="inst__title align-center mbr-fonts-style display-2">Feed de Instagram</h1>
-                    <div class="inst__content"></div>
-                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Mostrar más</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-social-feed loading" id="feed-h" data-facebook="" data-facebooktoken="" data-twitter="GoHalsa" data-posts="3" data-youtube="UCt_tncVAetpK5JeM8L-8jyw" data-rv-view="15" style="background-image: url(assets/images/bernard-hermant-hq3wzny3yz0-unsplash-2000x1333.jpg); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-h" data-facebook="" data-facebooktoken="" data-twitter="GoHalsa" data-posts="3" data-youtube="UCt_tncVAetpK5JeM8L-8jyw" data-rv-view="13" style="background-image: url(assets/images/bernard-hermant-hq3wzny3yz0-unsplash-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(239, 239, 239);">
     </div>
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
@@ -335,7 +317,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UIN7Zxk7XvFtuJqri6LF5wER7ryvzehPMrpg5PNMHCTktnB4UIl0Sfh7P1hptKJHUYG2AoMI2V7xIKXkBI15sAexvl61N3IpLlzgLdAJNuduEEGbYmcM5hLPOH7gnzEC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uk2N80mjLIFBDTyZVUMshZiriKg+kQ7paxqLxV14DmZWhu7a+xDyacWUhai1S4klJ9ja/g38X+mdHh26ZXr6wjx2U82maFwO2TVhCUkhihD1HXTlafIwtQDT5HLCk9L7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -381,7 +363,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Subscriu-te ara a la nostra newsletter i rep totes les novetats.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G/q3vMorTtsX0dbZ5ZMIlAfmvkjABu/X8wE4N31Jeosq/2YgJvHR8Mx0farHjTEZ3A8undomfgtNGn9dSLAazkhhK5/+PGy1b91/kKDP4lTmBe4h2QfTNFSw4xeJEmfi">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Efd/0sHMookcPYHD6TnKyWkzJ5O29gCfORhKXrSadc90x16dZ37yhUotxJ+gS2v16/VsLbDyJIlG+ANAThVQRMu3zNDtQmYIerWwtyK+RoAU5qjfOHQS5qb/DdLAPeBA">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -455,14 +437,12 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>
-  <script src="assets/index.js"></script>
-  <script src="assets/slick.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/codebird.min.js"></script>
   <script src="assets/moment.js"></script>
   <script src="assets/en-gb.js"></script>
