create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -317,7 +317,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uk2N80mjLIFBDTyZVUMshZiriKg+kQ7paxqLxV14DmZWhu7a+xDyacWUhai1S4klJ9ja/g38X+mdHh26ZXr6wjx2U82maFwO2TVhCUkhihD1HXTlafIwtQDT5HLCk9L7">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e8Yc6tS0PimhlLDjaoD91ryk1RyDP+R7dwMy1ZBo1GKYkI1uvO7A7B9qMyY8D9WlduHsGH9Fk5tQFzHgaQCJkplkcnXDFbiT4ooFk5KPaZZRbQ/CD4YBpoOfewewhswP">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -363,7 +363,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Subscriu-te ara a la nostra newsletter i rep totes les novetats.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Efd/0sHMookcPYHD6TnKyWkzJ5O29gCfORhKXrSadc90x16dZ37yhUotxJ+gS2v16/VsLbDyJIlG+ANAThVQRMu3zNDtQmYIerWwtyK+RoAU5qjfOHQS5qb/DdLAPeBA">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PGVNDdyBjhzeEWdLAFbWzxOBkiQlEa8owWlENtLD0c4nGTZzx2unzmofi/mWkAFHspLcNyj8FuQfXkY0hoohi4dk9z/Asf6ygjzTvV/Y1YNV4Qfv9bt9IcZDldnIEf14">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
